--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.31",
+    "@types/react-dom": "^17.0.1",
+    "@types/styled-components": "^5.1.7",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -31,6 +35,9 @@
     "eslint-plugin-react": "^7.22.0",
     "html-loader": "^2.0.0",
     "nodemon-webpack-plugin": "^4.4.4",
+    "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
